WIP : Mechanism to store results
TODO:
- Template all workloads
- Implement other workloads to store results
- Parser for results
- Add mechanism to send to Elastic

--- a/playbook.yml
+++ b/playbook.yml
@@ -16,3 +16,11 @@
   - include_role:
       name: "ycsb-bench"
     when: ycsb is defined and ycsb.workers > 0
+
+  - name: Check results directory
+    command: ls -tarlh /opt/result-data/
+    register: data
+  - debug:
+      msg: "Out {{data}}"
+  - include_role:
+      name: result
